# shiny-fishstick

./: .env.example  .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  architecture.md  benchmark.py  benchmark_developer_effort.py  benchmark_real_sites.py  contributing.md  design.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  ruff.toml  test_drift_engine.py  test_mcp_server.py  test_pipeline.py
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml  release_notes_v0.1.0-alpha.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  compatibility_report.md  compatibility_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  greetings.yml  stale.yml
Docs/: docs.html
alembic/: env.py
alembic/versions/: 0fc81bbb8a29_initial_schema.py  36e571bf8bb4_add_assertions_to_action.py
backend/: Dockerfile  requirements.txt
backend/app/: cli.py  main.py  worker.py
backend/mock_site/: main.py
docs/: docs.html  index.html  launch_assets.md
examples/ecommerce/: preflight.yaml
examples/mcp-agent/: agent.py
examples/real-life/: github_issue_creator.yaml  hackernews_searcher.yaml  stripe_checkout.yaml
examples/saas-dashboard/: preflight.yaml
frontend/: package-lock.json  package.json
frontend/Docs/: index.html
shared/specs/: mcp_server.py  preflight.yaml  sdk.py  sdk.rs  sdk.ts  test_sdk.py  tools.json
tests/e2e/: test_mcp_server.py
tests/unit/: test_chaos.py  (+11 more)
(+44 files in other folders)
